Ajustes en tablero

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -5,7 +5,7 @@
 
     <ion-header>
       <ion-toolbar>
-        <ion-title>Filtros</ion-title>
+        <ion-title svgversion></ion-title>
       </ion-toolbar>
     </ion-header>
 
