--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -122,6 +122,18 @@ ion-icon[svgversion] {
   color: #fdba12;
 }
 
+
+ion-title[svgversion] {
+  content: url("../assets/img/logo-almundo.svg");
+  z-index: 1000;
+  //padding: 2px 0px 3px;
+ // mask-size: contain;
+  //background: currentColor;
+ // width: 10em;
+//  height: 8em;
+  //color: white;
+}
+
 .split-pane-md.split-pane-visible > .split-pane-side {
   border-right: 0px;
 }
