--- a/src/pages/hotel-list/hotel-list.scss
+++ b/src/pages/hotel-list/hotel-list.scss
@@ -135,5 +135,19 @@ page-hotel-list {
       }
     }
   }
+  .amenities {
+    // content: url("../assets/img/filters/star.svg");
+  //  mask-image: url("../assets/img/filters/star.svg");
+    mask-repeat: no-repeat;
+    margin: 0 15px 0 0px;
+    //padding: 2px 0px 3px;
+    mask-size: contain;
+   // background: currentColor;
+    display: inline;
+    width: 1.8em;
+    height: 2em;
+    color: #444444;
+  }
+
 
 }
