mejoras en template

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -122,6 +122,32 @@ ion-icon[svgversion] {
   color: #fdba12;
 }
 
+ion-card-title{
+  color: #157ab1 !important;
+  font-size: medium !important;
+
+}
+
+ion-icon[svgfind] {
+  mask-image: url("../assets/img/filters/search.svg");
+  mask-repeat: no-repeat;
+  padding: 2px 0px 3px;
+  mask-size: contain;
+  background: currentColor;
+  width: 1em;
+  height: 1em;
+}
+
+ion-icon[svgstart] {
+  mask-image: url("../assets/img/filters/star.svg");
+  mask-repeat: no-repeat;
+  padding: 2px 0px 3px;
+  mask-size: contain;
+  background: currentColor;
+  width: 0.8em;
+  height: 0.8em;
+}
+
 
 ion-title[svgversion] {
   content: url("../assets/img/logo-almundo.svg");
@@ -136,4 +162,9 @@ ion-title[svgversion] {
 
 .split-pane-md.split-pane-visible > .split-pane-side {
   border-right: 0px;
+}
+
+ion-buttons{
+  color: #002c77;
+  text-transform: none !important;
 }
