--- a/src/pages/hotel-list/hotel-list.scss
+++ b/src/pages/hotel-list/hotel-list.scss
@@ -80,6 +80,7 @@ page-hotel-list {
   ion-item {
     background-color: #fff;
     position: relative;
+    padding-left: 0px
   }
 
   ion-list {
@@ -93,29 +94,6 @@ page-hotel-list {
     float: left;
     position: relative;
 
-
-  }
-
-  .description {
-    padding: 10px;
-    box-sizing: border-box;
-    position: relative;
-
-    h1 {
-      font-family: "Roboto";
-      line-height: 1em;
-      margin: 0 0 10px 0;
-    }
-
-    h2 {
-      color: green / 1.5;
-      font-family: "Open Sans";
-      line-height: 1.2em;
-      text-transform: uppercase;
-      font-size: 1em;
-      font-weight: 400;
-      margin: 1.2% 0;
-    }
 
   }
 
@@ -145,8 +123,33 @@ page-hotel-list {
    // background: currentColor;
     display: inline;
     width: 1.8em;
-    height: 2em;
+    height: 1.4em;
     color: #444444;
+  }
+
+  ion-buttons{
+    color: #002c77;
+    text-transform: none !important;
+  }
+
+  .amarillo {
+    color: #df6800;
+    font-size: large !important;
+    margin: 15px 0px 15px 0px;
+  }
+  .amarillo span{
+    font-size:x-large !important;
+  }
+
+  ion-icon[svgstart] {
+    mask-image: url("../../assets/img/filters/star.svg");
+    mask-repeat: no-repeat;
+    padding: 2px 0px 3px;
+    mask-size: contain;
+    background: currentColor;
+    width: 1em;
+    height: 1em;
+    color: #fdba12;
   }
 
 
